--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="modal">
             <button class="close-modal">&times;</button>
             <h1>Hey Guys Welcome to my Website😎</h1>
-            <p>Hi,I'm Musa.I'm a self-taught freelance developer.I can do blog-news web applications.<br>-Javascript<br>-Python<br>-React Native</p>
+            <p>Hi,I'm Musa.I'm a self-taught freelance developer.I can do blog-news web applications.<br>-Javascript<br>-Python<br>-React</p>
         </div>
         <div class="overlay"></div>
         <header>
@@ -52,9 +52,9 @@
                 <img src="img/profile.png" alt="" class="img-fluid" id="profile-image">
                 <h1 class="text-uppercase">Free lance Developer</h1>
                 <hr class="smile-light">
-                <h2>Asp.NET - Django</h2>
+                <h2>React-Flask</h2>
                 <h2>Html5 - CSS - Bootstrap</h2>
-                <h2>E-ticaret - Blog - Haber</h2>
+                <h2>Javascript-Jquery</h2>
                 <button class="btn-1">Do you wanna hover?</button>
                 <button class="btn-2">Is it awesome?</button>
             </div>
