--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             </div>
 
         </section>
-        <a href="" class="backtotop"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
+        <a href="" class="backtotop" style="z-index=6;"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
         <footer>
             <div class="container">
                 <a href="https://www.linkedin.com/in/musa-%C5%9Fahin-kundakc%C4%B1-2184271b4/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
