--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section id="portfolio">
             <div class="container">
                 <div style="margin-bottom: 5rem">
-                    <h2 class="text-uppercase">About me</h2>
+                    <h2 class="text-uppercase">Gallery</h2>
                 <hr class="smile-dark">
                 </div>
                     <div class="owl-carousel owl-theme">
