--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <a href="https://www.linkedin.com/in/musa-%C5%9Fahin-kundakc%C4%B1-2184271b4/" target="_blank"><i class="fab fa-linkedin-in linkedin"></i></a>
                 <a href="https://github.com/musasahinkundakci" target="_blank"><i class="fab fa-github github"></i></a>
                 <a href="https://www.facebook.com/jelibo123/" target="_blank"><i class="fab fa-facebook-f facebook"></i></a>
-                <a href="https://www.instagram.com/musasahin.21/?hl=tr" target="_blank"><i class="fab fa-instagram instagram" target="_blank"></i></a>
+                <a href="https://www.instagram.com/musasahin.21/?hl=tr" target="_blank"><i class="fab fa-instagram instagram"></i></a>
                 <a href="https://www.hackerrank.com/musa_20" target="_blank"><i class="fab fa-hackerrank hackerrank"></i></a>
                 <a href="https://mirror-h.org/search/hacker/49386/" target="_blank"><i class="fas fa-skull mirror"></i></a>
             </div>
