--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="modal hide">
             <button class="close-modal">&times;</button>
             <h1>Hey Guys Welcome to my Website😎</h1>
-            <p>Hi,I'm Musa.I'm a self-taught freelance developer.I can do blog-news web applications.<br>-Javascript<br>-Python<br>-React Native</p>
+            <p>Hi,I'm Musa.I'm a self-taught freelance developer.I can do blog-news web applications.<br>-Javascript<br>-Python<br>-React<br>-C</p>
         </div>
         <div class="overlay hide"></div>
         <header>
