--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="container">
                
                 <div style="margin-bottom: 5rem">
-                    <h2 class="text-uppercase">About me</h2>
+                    <h2 class="text-uppercase">Gallery</h2>
                     <hr class="smile-dark">
                 </div>
                 <div class="owl-carousel owl-theme">
