--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 $("html,body").animate({
                     scrollTop: 0
                 }, 700)
-                return false; //clikc olaynın çalışmasını engellemke
+                return false; 
 
             });
             $(".backtotop").mouseenter(function() {
